--- a/views/console.jade
+++ b/views/console.jade
@@ -22,7 +22,7 @@ html(lang='cz', dir='ltr')
           each anketa, i in ankety
             tr
               td #{anketa._id}
-              th #{anketa.name[0]}
+              th #{anketa.name}
               td #{anketa.count}
               td #{anketa.avgTime}
               td #{anketa.resultsCount}
