--- a/views/console.jade
+++ b/views/console.jade
@@ -26,6 +26,9 @@ html(lang='cz', dir='ltr')
               td #{anketa.count}
               td #{anketa.avgTime}
               td #{anketa.resultsCount}
+          tr
+            td
+            td #{ankety.length}
         
             
   script(src='../js/jquery-3.3.1.min.js', type='text/javascript')
