--- a/views/menu.jade
+++ b/views/menu.jade
@@ -166,6 +166,7 @@ html(lang='cz', dir='ltr')
         //- h2 info
       .map-container(style="display:none")
         //- h2 map
+        img(src='img/floor_plan.jpg')#floor-plan
       .nav-container
         .nav-item(onclick='menuHome()')
           i.fas.fa-home
