--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,6 +22,10 @@
   overflow: auto;
 }
 
+.map-container {
+  overflow-y: hidden;
+}
+
 .nav-item {
   height: 100%;
   flex-grow: 1;
@@ -65,6 +69,10 @@
   font-size: 28px;
   opacity: 0.6;
   margin: 16px 0;
+}
+
+#floor-plan {
+  height: 100%;
 }
 
 #tile-1, #sub-1 .menu-tile {
