info, old cookies, register translate

--- a/views/menu.jade
+++ b/views/menu.jade
@@ -112,6 +112,7 @@ html(lang='cz', dir='ltr')
     .menu-container
       .select-container
         .select-main-container
+          h2 ŠKODA IVET 2019
           .menu-tile#tile-1(onclick='expandTile(1)')
             span Electrification
           .menu-tile#tile-2(onclick='expandTile(2)')
@@ -163,7 +164,11 @@ html(lang='cz', dir='ltr')
                 span #{anketa.name}
         
       .info-container(style="display:none")
-        //- h2 info
+        H3 FEEDBACK ŠKODA IVET 2019
+        p   The department of electronics predevelopment EEH has prepared new way of rating themes for this year’s ŠKODA IVET. Now you can rate projects on your mobile phone. Project managers will be able to get their innovation to the correct form thanks to your opinion. 
+        p   We want to point out that data collection is anonymous. 
+        p.bold   Thank you for your feedback!
+        
       .map-container(style="display:none")
         //- h2 map
         img(src='img/floor_plan.jpg')#floor-plan
