--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,6 +26,26 @@
   overflow-y: hidden;
 }
 
+.info-container {
+  width: calc(100% - 32px);
+  height: calc(100% - 97px);
+  padding: 16px;
+}
+.info-container h3 {
+  font-size: 4rem;
+  font-family: skodaFontRegular;
+  margin: 16px 0;
+}
+.info-container p {
+  opacity: 0.8;
+  font-size: 3rem;
+  margin: 16px 0;
+}
+.info-container p.bold {
+  opacity: 1;
+  font-family: skodaFontRegular;
+}
+
 .nav-item {
   height: 100%;
   flex-grow: 1;
@@ -41,6 +61,11 @@
 .select-main-container {
   width: 100%;
   height: 100%;
+}
+.select-main-container h2 {
+  margin: 16px;
+  font-size: 4rem;
+  font-family: skodaFontRegular;
 }
 
 .menu-tile {
