--- a/public/sass/menu.sass
+++ b/public/sass/menu.sass
@@ -256,7 +256,21 @@
 
 .map-container
   overflow-y: hidden
-
+.info-container
+  width: calc(100% - 32px)
+  height: calc(100% - 97px)
+  padding: 16px
+  h3
+    font-size: 4rem
+    font-family: skodaFontRegular
+    margin: 16px 0
+  p
+    opacity: .8
+    font-size: 3rem
+    margin: 16px 0
+    &.bold
+      opacity: 1
+      font-family: skodaFontRegular
 .nav-item
   height: 100%
   flex-grow: 1
@@ -269,6 +283,10 @@
 .select-main-container
   width: 100%
   height: 100%
+  h2
+    margin: 16px
+    font-size: 4rem
+    font-family: skodaFontRegular
 
 .menu-tile
   width: calc(100% - 32px)
