--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1207,10 +1207,15 @@ select {
 
 .desc-name {
   width: 100%;
-  height: 20%;
+  height: 50%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
+  position: absolute;
+  top: 0;
+}
+.desc-name h1 {
+  margin-top: 32px;
 }
 
 .desc-data {
@@ -2096,10 +2101,6 @@ select[name=sector_count] {
 
   .desc-input-label {
     font-size: 4rem;
-  }
-
-  .desc-name {
-    height: 20%;
   }
 
   .desc-btn-start {
