--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -750,10 +750,14 @@ select
 
 .desc-name
   width: 100%
-  height: 20%
+  height: 50%
   display: flex
   justify-content: center
-  align-items: center
+  align-items: start
+  position: absolute
+  top: 0
+  h1
+    margin-top: 32px
 
 .desc-data
   width: 100%
@@ -1501,7 +1505,7 @@ select[name='sector_count']
     font-size: 4rem
     // margin-bottom: 2rem
   .desc-name
-    height: 20%
+    // height: 20%
   .desc-btn-start
     height: 20%
     align-items: center
