--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -747,7 +747,9 @@ select
   height: 100%
   width: 100%
   justify-content: space-around
-
+.reg
+  position: unset !important
+  height: unset !important
 .desc-name
   width: 100%
   height: 50%
