--- a/views/register.jade
+++ b/views/register.jade
@@ -16,7 +16,7 @@ html(lang='cz', dir='ltr')
     div.content-container
       div.main-container
         div.desc
-          div.desc-name
+          div.desc-name.reg
               h1.desc-title Registration
           div.desc-data
             //- div.desc-popis
