--- a/views/quiz-index.jade
+++ b/views/quiz-index.jade
@@ -617,4 +617,6 @@ html(lang='en')
         // Main JS
         script(src='../../js/main2.js')
         script(src='../../js/template.js')
+        script(src='../../js/ajaxSubmit.js')
+
         // end document
