--- a/views/quiz-ankety.jade
+++ b/views/quiz-ankety.jade
@@ -4,7 +4,7 @@ div
       .container-fluid
         .row
           .col-12
-            button.m-b-40.au-btn.au-btn-icon.au-btn--skoda.btn-block(type='button', name='button')
+            button.m-b-40.au-btn.au-btn-icon.au-btn--skoda.btn-block(type='button', name='button', onclick='getSite("/ankety/create")')
               i.zmdi.zmdi-plus
               | Přidat novou anketu
         //
@@ -29,47 +29,22 @@ div
                     th.text-right Vyplněné
                     th
                 tbody
-                  tr.tr-shadow
-                    td.font-weight-bold Scala
-                    td 2019-10-21
-                    td.text-right 8
-                    td.text-right 25
-                    td
-                      .table-data-feature
-                        button.item(type='button', name='button')
-                          i.zmdi.zmdi-play
-                        button.item(type='button', name='button')
-                          i.zmdi.zmdi-edit
-                        button.item(type='button', name='button')
-                          i.zmdi.zmdi-delete
-                  tr.spacer
-                  tr.tr-shadow
-                    td.font-weight-bold ARNC
-                    td 2019-8-5
-                    td.text-right 6
-                    td.text-right 7
-                    td
-                      .table-data-feature
-                        button.item(type='button', name='button')
-                          i.zmdi.zmdi-play
-                        button.item(type='button', name='button')
-                          i.zmdi.zmdi-edit
-                        button.item(type='button', name='button')
-                          i.zmdi.zmdi-delete
-                  tr.spacer
-                  tr.tr-shadow
-                    td.font-weight-bold Rotary knobs
-                    td 2019-9-11
-                    td.text-right 10
-                    td.text-right 12
-                    td
-                      .table-data-feature
-                        button.item(type='button', name='button')
-                          i.zmdi.zmdi-play
-                        button.item(type='button', name='button')
-                          i.zmdi.zmdi-edit
-                        button.item(type='button', name='button')
-                          i.zmdi.zmdi-delete
+                  each anketa, i in ankety
+                    tr.tr-shadow
+                      td.font-weight-bold #{anketa.name}
+                      td #{anketa.date}
+                      td.text-right #{anketa.questions.length}
+                      td.text-right 0
+                      td
+                        .table-data-feature
+                          button.item(type='button', name='button', onclick='window.open("/play/#{anketa._id}")')
+                            i.zmdi.zmdi-play
+                          button.item(type='button', name='button')
+                            i.zmdi.zmdi-edit
+                          button.item(type='button', name='button', onclick='deleteAnketa("#{anketa._id}");')
+                            i.zmdi.zmdi-delete
+                    tr.spacer
+                    
         .row
           .col-lg-12
             .au-card.au-card--no-pad
