--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,7 +12,7 @@
 }
 
 .menu-tile-container {
-  width: 50%;
+  width: 100%;
   color: white;
   display: flex;
   height: 50%;
@@ -28,11 +28,11 @@
 
 .menu-tile {
   z-index: -1000;
-  width: 40%;
+  width: 60%;
   background: blue;
   position: relative;
-  padding-top: 40%;
-  border-radius: 1rem;
+  padding-top: 60%;
+  border-radius: 2rem;
   background-position: center;
   background-size: cover !important;
 }
@@ -1132,12 +1132,13 @@ select {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 350px;
 }
 .open-question textarea {
   width: 80%;
   height: 80%;
   padding: 2vh;
-  font-size: 1.25rem;
+  font-size: 2.25rem;
 }
 
 .question {
