--- a/views/quiz-index.jade
+++ b/views/quiz-index.jade
@@ -616,6 +616,7 @@ html(lang='en')
         script(src='../../vendor/select2/select2.min.js')
         // Main JS
         script(src='../../js/main2.js')
+        script(src='../../js/results2.js')
         script(src='../../js/template.js')
         script(src='../../js/ajaxSubmit.js')
 
